# RustRemoteShell

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  README.md.gpg
.github/workflows/: check.yml  scheduled.yml  test.yml
cli/: Cargo.toml  README.md
cli/src/: main.rs
rust-remote-shell/: Cargo.toml  README.md  device.json
rust-remote-shell/interfaces/: org.astarte-platform.rust-remote-shell.ConnectToHost.json
rust-remote-shell/src/: astarte.rs  command.rs  device.rs  device_server.rs  host.rs  io_handler.rs  lib.rs  protocol.rs  sender_client.rs  service.rs  shell.rs  stream.rs  tls.rs  websocket.rs
