[package]
name = "cli"
version = "0.1.0"
edition = "2021"
rust-version = "1.59.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-remote-shell = { path = "../rust-remote-shell" } # cli depends on rust-remote-shell library #
clap = { version = "3.2.25", features = ["derive"] }
color-eyre = "0.6.2"
shellwords = "1.1.0"
tokio = "1.28.1"
url = "2.3.1"
tracing = "0.1.37"
tower = { version = "0.4.13", features = ["util"] }
tracing-subscriber = "0.3.17"
tokio-tungstenite = "0.18.0"
# pinned transitive dependencies
once_cell = "=1.17.2"
regex = "=1.3.9"

[features]
default = ["tls"]
tls = ["rust-remote-shell/tls"]
