[package]
name = "rust-remote-shell"
version = "0.1.0"
edition = "2021"
rust-version = "1.59.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[dependencies]
futures = "0.3.28"
tokio-rustls = { version = "0.23.4", optional = true }
shellwords = "1.1.0"
thiserror = "1.0.40"
tokio = { version = "1.28.1", features = ["full"] }
tokio-tungstenite = "0.18.0"
tracing = "0.1.37"
url = "2.3.1"
rustls-pemfile = {version = "1.0.2", optional = true }
async-trait = "0.1.68"
tower = "0.4.13"
# pinned transitive dependencies
security-framework = "=2.8.1"


[features]
default = ["tls"]
tls = ["tokio-tungstenite/rustls-tls-native-roots", "tokio-rustls", "rustls-pemfile"]
