[package]
name = "rust-remote-shell"
version = "0.1.0"
edition = "2021"
rust-version = "1.59.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[dependencies]
futures = "0.3.28"
tokio-rustls = { version = "0.23.4", optional = true }
shellwords = "1.1.0"
thiserror = "1.0.40"
tokio = { version = "1.28.1", features = ["full"] }
tokio-tungstenite = "0.18.0"
tracing = "0.1.37"
url = "2.3.1"
rustls-pemfile = {version = "1.0.2", optional = true }
webpki-roots = {version = "0.23.1", optional = true }
async-trait = "0.1.68"
tower = "0.4.13"
serde = "1.0.164"
serde_json = "1.0.97"
astarte-device-sdk = "0.5.1"
# pinned transitive dependencies
security-framework = "=2.8.1"
time = "=0.3.15"
hashlink = "=0.8.1"
openssl-src = "=111.24.0"




[features]
default = ["tls"]
tls = ["tokio-tungstenite/rustls-tls-native-roots", "tokio-rustls", "webpki-roots", "rustls-pemfile"]
