[package]
name = "rust-remote-shell"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[dependencies]
futures = "0.3.28"
shellwords = "1.1.0"
thiserror = "1.0.40"
tokio = { version = "1.28.1", features = ["full"] }
tokio-tungstenite = "0.18.0"
tracing = "0.1.37"
url = "2.3.1"
